// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ============================================================================
// USER AUTHENTICATION TABLES
// ============================================================================

model User {
  id                      String    @id @default(uuid())
  email                   String    @unique
  passwordHash            String    @map("password_hash")
  firstName               String?   @map("first_name")
  lastName                String?   @map("last_name")
  isVerified              Boolean   @default(false) @map("is_verified")
  isActive                Boolean   @default(true) @map("is_active")
  aiCreditsBalance        Float     @default(0.0) @map("ai_credits_balance") // Current AI Credits balance
  createdAt               DateTime  @default(now()) @map("created_at")
  updatedAt               DateTime  @updatedAt @map("updated_at")
  lastLogin               DateTime? @map("last_login")

  // Relations
  emailVerificationTokens EmailVerificationToken[]
  passwordResetTokens     PasswordResetToken[]
  refreshTokens           RefreshToken[]
  projects                UserProject[]
  llmUsageLogs            LlmUsageLog[]
  creditsTransactions     UserCreditsTransaction[] // Admin credit adjustments

  @@map("users")
}

model EmailVerificationToken {
  id        String    @id @default(uuid())
  userId    String    @map("user_id")
  token     String    @unique
  expiresAt DateTime  @map("expires_at")
  createdAt DateTime  @default(now()) @map("created_at")
  usedAt    DateTime? @map("used_at")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("email_verification_tokens")
}

model PasswordResetToken {
  id        String    @id @default(uuid())
  userId    String    @map("user_id")
  token     String    @unique
  expiresAt DateTime  @map("expires_at")
  createdAt DateTime  @default(now()) @map("created_at")
  usedAt    DateTime? @map("used_at")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("password_reset_tokens")
}

model RefreshToken {
  id              String    @id @default(uuid())
  userId          String    @map("user_id")
  token           String    @unique
  expiresAt       DateTime  @map("expires_at")
  createdAt       DateTime  @default(now()) @map("created_at")
  revokedAt       DateTime? @map("revoked_at")
  replacedByToken String?   @map("replaced_by_token")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("refresh_tokens")
}

// ============================================================================
// USER PROJECTS TABLE
// ============================================================================

enum ProcessingStatus {
  NOT_INITIATED               @map("not_initiated")
  EVALUATED                   @map("evaluated")
  UNDER_PROCESSING            @map("under_processing")
  FAILED_INSUFFICIENT_CREDITS @map("failed_non_credit_left")
  FAILED_OTHER                @map("failed_other_reason")
}

model UserProject {
  id          String   @id @default(uuid())
  userId      String   @map("user_id")
  projectName String   @map("project_name")
  userIdea    String   @map("user_idea") @db.Text // Text field for unlimited length

  // Stage 1: Intent Decomposition
  problemStatement      String?          @map("problem_statement") @db.Text
  methodologies         String[]         @default([]) @map("methodologies")
  applicationDomains    String[]         @default([]) @map("application_domains")
  constraints           String[]         @default([]) @map("constraints")
  contributionTypes     String[]         @default([]) @map("contribution_types")
  keywordsSeed          String[]         @default([]) @map("keywords_seed")
  intentProcessedStatus ProcessingStatus @default(NOT_INITIATED) @map("intent_processed_status")

  // Stage 2: Query Generation
  booleanQuery               String?          @map("boolean_query") @db.Text
  expandedKeywords           String[]         @default([]) @map("expanded_keywords")
  searchQueries              Json?            @map("search_queries")
  searchQueryProcessedStatus ProcessingStatus @default(NOT_INITIATED) @map("search_query_processing_status")
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  // Relations
  user            User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  candidatePapers CandidatePaper[]
  llmUsageLogs    LlmUsageLog[]

  @@map("user_projects")
}

// ============================================================================
// CANDIDATE PAPERS TABLE
// ============================================================================

model CandidatePaper {
  id                  String    @id @default(uuid())
  projectId           String    @map("project_id")
  
  // Basic Paper Info (Created immediately)
  paperTitle          String    @map("paper_title")
  paperAbstract       String    @map("paper_abstract") @db.Text
  paperDownloadLink   String?   @map("paper_download_link")
  
  // LLM Processing Status
  isProcessedByLlm    Boolean   @default(false) @map("is_processed_by_llm")
  
  // Semantic Similarity (Populated after processing)
  semanticSimilarity  Decimal?  @map("semantic_similarity") @db.Decimal(5, 4)
  similarityModelName String?   @map("similarity_model_name")
  
  // Overlap Analysis
  problemOverlap      String?   @map("problem_overlap") // 'high' | 'medium' | 'low'
  methodOverlap       String?   @map("method_overlap")  // 'high' | 'medium' | 'low'
  domainOverlap       String?   @map("domain_overlap")  // 'high' | 'medium' | 'low'
  constraintOverlap   String?   @map("constraint_overlap") // 'high' | 'medium' | 'low'
  
  // C1 Scoring (Competitor Analysis)
  c1Score             Decimal?  @map("c1_score") @db.Decimal(5, 2)
  c1Justification     String?   @map("c1_justification") @db.Text
  c1Strengths         String?   @map("c1_strengths") @db.Text
  c1Weaknesses        String?   @map("c1_weaknesses") @db.Text
  
  // C2 Scoring (Supporting Work Analysis)
  c2Score             Decimal?  @map("c2_score") @db.Decimal(5, 2)
  c2Justification     String?   @map("c2_justification") @db.Text
  c2ContributionType  String?   @map("c2_contribution_type") @db.Text
  c2RelevanceAreas    String?   @map("c2_relevance_areas") @db.Text
  c2Strengths         String?   @map("c2_strengths") @db.Text
  c2Weaknesses        String?   @map("c2_weaknesses") @db.Text
  
  // Gap Analysis
  researchGaps        String?   @map("research_gaps") @db.Text
  userNovelty         String?   @map("user_novelty") @db.Text
  candidateAdvantage  String?   @map("candidate_advantage") @db.Text
  
  // LLM Metadata
  modelUsed           String?   @map("model_used")
  inputTokensUsed     Int?      @map("input_tokens_used")
  outputTokensUsed    Int?      @map("output_tokens_used")
  processedAt         DateTime? @map("processed_at")
  
  // Timestamps
  createdAt           DateTime  @default(now()) @map("created_at")
  updatedAt           DateTime  @updatedAt @map("updated_at")
  
  // Relations
  project             UserProject @relation(fields: [projectId], references: [id], onDelete: Cascade)
  llmUsageLogs        LlmUsageLog[]
  
  @@map("candidate_papers")
  @@index([projectId])
  @@index([isProcessedByLlm])
  @@index([createdAt])
}

// ============================================================================
// FUTURE TABLES (Commented out for now - uncomment when needed)
// ============================================================================

// model SavedPaper {
//   id            String   @id @default(uuid())
//   userId        String   @map("user_id")
//   projectId     String?  @map("project_id")
//   paperTitle    String   @map("paper_title")
//   paperAuthors  String?  @map("paper_authors")
//   paperYear     Int?     @map("paper_year")
//   paperVenue    String?  @map("paper_venue")
//   paperAbstract String?  @map("paper_abstract")
//   paperUrl      String?  @map("paper_url")
//   category      String?  // 'C1' or 'C2'
//   score         Decimal? @db.Decimal(4, 2)
//   notes         String?
//   createdAt     DateTime @default(now()) @map("created_at")
//
//   // Relations
//   user    User         @relation(fields: [userId], references: [id], onDelete: Cascade)
//   project UserProject? @relation(fields: [projectId], references: [id], onDelete: Cascade)
//
//   @@map("saved_papers")
// }

// ============================================================================
// LLM MODEL PRICING TABLE (for cost calculation)
// ============================================================================

model LlmModelPricing {
  id          String   @id @default(uuid())
  
  // Model Identification
  modelName   String   @map("model_name") // e.g., 'gpt-4o-mini', 'gpt-4', 'gpt-3.5-turbo'
  provider    String   @default("openai") // 'openai', 'anthropic', 'groq', etc.
  
  // Pricing Tier (for providers that support multiple tiers like OpenAI)
  pricingTier String   @default("standard") @map("pricing_tier") // 'batch', 'flex', 'standard', 'priority'
  
  // Pricing (in USD per million tokens, stored as Float)
  inputUsdPricePerMillionTokens        Float  @map("input_usd_price_per_million_tokens") // e.g., 1.50 = $1.50 per 1M tokens
  outputUsdPricePerMillionTokens       Float  @map("output_usd_price_per_million_tokens") // e.g., 6.00 = $6.00 per 1M tokens
  cachedInputUsdPricePerMillionTokens  Float? @map("cached_input_usd_price_per_million_tokens") // For models with prompt caching
  
  // Versioning and Status
  isActive    Boolean  @default(true) @map("is_active") // Only active pricing is used for calculations
  isLatest    Boolean  @default(true) @map("is_latest") // Mark the latest pricing for each model
  
  // Metadata
  description String?  @db.Text // Optional description (e.g., "GPT-4 Turbo with vision")
  notes       String?  @db.Text // Admin notes about pricing changes
  
  // Timestamps
  effectiveFrom DateTime @default(now()) @map("effective_from") // When this pricing becomes effective
  effectiveTo   DateTime? @map("effective_to") // When this pricing expires (null = current)
  createdAt     DateTime @default(now()) @map("created_at")
  updatedAt     DateTime @updatedAt @map("updated_at")
  
  // Indexes for efficient querying
  @@unique([modelName, provider, pricingTier, effectiveFrom]) // Prevent duplicate pricing
  @@index([modelName, provider, pricingTier, isLatest]) // Quick lookup of latest pricing
  @@index([isActive, isLatest]) // Query active and latest prices
  @@index([effectiveFrom]) // Time-based queries
  
  @@map("llm_model_pricing")
}

// ============================================================================
// LLM USAGE LOGS TABLE (for billing and tracking)
// ============================================================================

model LlmUsageLog {
  id        String   @id @default(uuid())
  userId    String   @map("user_id")
  projectId String?  @map("project_id") // Optional: some calls may not be project-specific
  paperId   String?  @map("paper_id") // Optional: if call is related to a specific paper
  
  // LLM Call Details
  stage           String   // 'intent', 'queries', 'score', etc.
  modelName       String   @map("model_name") // e.g., 'gpt-4o-mini', 'gpt-4'
  provider        String   @default("openai") // 'openai', 'anthropic', etc.
  
  // Token Usage
  inputTokens     Int      @map("input_tokens")
  outputTokens    Int      @map("output_tokens")
  totalTokens     Int      @map("total_tokens")
  
  // Cost Tracking (in USD, stored as Float)
  inputCostUsd    Float?   @map("input_cost_usd") 
  outputCostUsd   Float?   @map("output_cost_usd")
  totalCostUsd    Float?   @map("total_cost_usd")
  
  // Performance Metrics
  durationMs      Int?     @map("duration_ms") // Time taken for API call in milliseconds
  
  // Request/Response Metadata
  requestId       String?  @map("request_id") // OpenAI request ID or similar
  status          String   @default("success") // 'success', 'error', 'timeout'
  errorMessage    String?  @map("error_message") @db.Text
  
  // Additional Context
  metadata        String?  @db.Text // JSON string for any additional data
  
  createdAt       DateTime @default(now()) @map("created_at")
  
  // Relations
  user    User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  project UserProject? @relation(fields: [projectId], references: [id], onDelete: SetNull)
  paper   CandidatePaper? @relation(fields: [paperId], references: [id], onDelete: SetNull)
  
  // Indexes for efficient querying
  @@index([userId, createdAt]) // Query user's usage over time
  @@index([projectId, createdAt]) // Query project's usage
  @@index([stage, createdAt]) // Query by stage
  @@index([createdAt]) // Time-based queries for billing periods
  
  @@map("llm_usage_logs")
}

// ============================================================================
// CREDITS MULTIPLIER HISTORY (for global USD to Credits conversion)
// ============================================================================

model CreditsMultiplierHistory {
  id        String   @id @default(uuid())
  
  // USD to AI Credits Conversion Rate
  usdToCreditsMultiplier Float @map("usd_to_credits_multiplier") // 1 USD = X Credits
  
  // Metadata
  description String?  @db.Text // Description of this rate
  updatedBy   String?  @map("updated_by") // Admin user ID who set this rate
  
  // Validity period
  effectiveFrom DateTime @default(now()) @map("effective_from") // When this rate becomes active
  effectiveTo   DateTime? @map("effective_to") // When this rate expires (null = current)
  
  // Status
  isActive Boolean @default(true) @map("is_active") // Is this the current active rate?
  
  // Timestamps
  createdAt   DateTime @default(now()) @map("created_at")
  
  @@index([isActive, effectiveFrom])
  @@map("credits_multiplier_history")
}

// ============================================================================
// DEFAULT CREDITS HISTORY (for new user signup credits)
// ============================================================================

model DefaultCreditsHistory {
  id        String   @id @default(uuid())
  
  // Default Credits for New Users
  defaultCredits Float @map("default_credits") // Credits given on signup
  
  // Metadata
  description String?  @db.Text // Description of this credit amount
  updatedBy   String?  @map("updated_by") // Admin user ID who set this amount
  
  // Validity period
  effectiveFrom DateTime @default(now()) @map("effective_from") // When this amount becomes active
  effectiveTo   DateTime? @map("effective_to") // When this amount expires (null = current)
  
  // Status
  isActive Boolean @default(true) @map("is_active") // Is this the current active amount?
  
  // Timestamps
  createdAt   DateTime @default(now()) @map("created_at")
  
  @@index([isActive, effectiveFrom])
  @@map("default_credits_history")
}

// ============================================================================
// USER CREDITS TRANSACTIONS (for all credit balance changes)
// ============================================================================

model UserCreditsTransaction {
  id        String   @id @default(uuid())
  
  // User and Admin
  userId    String   @map("user_id") // User receiving/losing credits
  adminId   String?  @map("admin_id") // Admin who performed the action (null for system actions like signup)
  
  // Transaction Details
  transactionType String @map("transaction_type") // 'SIGNUP_DEFAULT' | 'ADMIN_RECHARGE' | 'ADMIN_DEDUCT' | 'ADMIN_ADJUSTMENT'
  amount          Float  // Positive for additions, negative for deductions
  balanceBefore   Float  @map("balance_before") // Balance before transaction
  balanceAfter    Float  @map("balance_after") // Balance after transaction
  
  // Metadata
  reason      String?  @db.Text // Reason for this transaction
  description String?  @db.Text // Additional notes
  
  // Timestamps
  createdAt   DateTime @default(now()) @map("created_at")
  
  // Relations
  user  User @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  @@index([userId, createdAt])
  @@index([adminId])
  @@index([transactionType])
  @@map("user_credits_transactions")
}


// ============================================================================
// BACKGROUND JOBS TABLE (for BullMQ tracking)
// ============================================================================

enum JobType {
  PROJECT_INIT_INTENT
  PROJECT_INIT_QUERY
  PAPER_SCORING
  SEND_EMAIL
}

enum JobStatus {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
  FAILED_NO_CREDITS
}

model BackgroundJob {
  id            String    @id @default(uuid())
  userId        String    @map("user_id") // Owner
  projectId     String?   @map("project_id") // Project context
  paperId       String?   @map("paper_id") // Paper context (optional)
  
  jobType       JobType   @map("job_type") // INTENT, QUERY, PAPER_SCORE
  bullJobId     String?   @map("bull_job_id") // Reference to BullMQ job ID
  
  status        JobStatus @default(PENDING) // PENDING, PROCESSING, COMPLETED, FAILED
  failureReason String?   @map("failure_reason") @db.Text // e.g., "INSUFFICIENT_CREDITS"
  
  attempts      Int       @default(0) // Retry attempts
  
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")

  @@index([status, jobType])
  @@index([userId])
  @@index([projectId])
  @@index([userId, status]) // Filter jobs by user and status
  @@map("background_jobs")
}
