@startuml database-er-diagram

' ============================================================================
' Literature Review System - Database ER Diagram
' ============================================================================
' This diagram shows all database tables and their relationships
' Last Updated: 2026-01-11
' ============================================================================

' Entity definitions

entity "users" as users {
  * id : UUID <<PK>>
  --
  * email : VARCHAR(255) <<unique>>
  * password_hash : VARCHAR(255)
  first_name : VARCHAR(100)
  last_name : VARCHAR(100)
  * is_verified : BOOLEAN
  * is_active : BOOLEAN
  * ai_credits_balance : FLOAT
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
  last_login : TIMESTAMP
}

entity "email_verification_tokens" as email_tokens {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * token : VARCHAR(255) <<unique>>
  * expires_at : TIMESTAMP
  * created_at : TIMESTAMP
  used_at : TIMESTAMP
}

entity "password_reset_tokens" as password_tokens {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * token : VARCHAR(255) <<unique>>
  * expires_at : TIMESTAMP
  * created_at : TIMESTAMP
  used_at : TIMESTAMP
}

entity "refresh_tokens" as refresh_tokens {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * token : VARCHAR(255) <<unique>>
  * expires_at : TIMESTAMP
  * created_at : TIMESTAMP
  revoked_at : TIMESTAMP
  replaced_by_token : VARCHAR(255)
}

entity "user_projects" as projects {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * project_name : VARCHAR(255)
  * user_idea : TEXT
  
  ' Stage 1: Intent
  problem_statement : TEXT
  methodologies : TEXT[]
  application_domains : TEXT[]
  constraints : TEXT[]
  contribution_types : TEXT[]
  keywords_seed : TEXT[]
  intent_processed_status : ENUM
  
  ' Stage 2: Queries
  boolean_query : TEXT
  expanded_keywords : TEXT[]
  search_queries : JSONB
  search_query_processing_status : ENUM

  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity "candidate_papers" as papers {
  * id : UUID <<PK>>
  --
  * project_id : UUID <<FK>>
  * paper_title : VARCHAR(500)
  * paper_abstract : TEXT
  paper_download_link : VARCHAR(500)
  * is_processed_by_llm : BOOLEAN
  semantic_similarity : DECIMAL(5,4)
  similarity_model_name : VARCHAR(100)
  problem_overlap : VARCHAR(20)
  method_overlap : VARCHAR(20)
  domain_overlap : VARCHAR(20)
  constraint_overlap : VARCHAR(20)
  c1_score : DECIMAL(5,2)
  c1_justification : TEXT
  c1_strengths : TEXT
  c1_weaknesses : TEXT
  c2_score : DECIMAL(5,2)
  c2_justification : TEXT
  c2_contribution_type : TEXT
  c2_relevance_areas : TEXT
  c2_strengths : TEXT
  c2_weaknesses : TEXT
  research_gaps : TEXT
  user_novelty : TEXT
  candidate_advantage : TEXT
  model_used : VARCHAR(100)
  input_tokens_used : INTEGER
  output_tokens_used : INTEGER
  processed_at : TIMESTAMP
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity "llm_model_pricing" as model_pricing {
  * id : UUID <<PK>>
  --
  * model_name : VARCHAR(100)
  * provider : VARCHAR(50)
  * pricing_tier : VARCHAR(50)
  * input_usd_price_per_million_tokens : FLOAT
  * output_usd_price_per_million_tokens : FLOAT
  cached_input_usd_price_per_million_tokens : FLOAT
  * is_active : BOOLEAN
  * is_latest : BOOLEAN
  description : TEXT
  notes : TEXT
  * effective_from : TIMESTAMP
  effective_to : TIMESTAMP
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity "llm_usage_logs" as llm_logs {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  project_id : UUID <<FK>>
  paper_id : UUID <<FK>>
  * stage : VARCHAR(50)
  * model_name : VARCHAR(100)
  * provider : VARCHAR(50)
  * input_tokens : INTEGER
  * output_tokens : INTEGER
  * total_tokens : INTEGER
  input_cost_usd : FLOAT
  output_cost_usd : FLOAT
  total_cost_usd : FLOAT
  duration_ms : INTEGER
  request_id : VARCHAR(255)
  * status : VARCHAR(20)
  error_message : TEXT
  metadata : TEXT
  * created_at : TIMESTAMP
}

entity "credits_multiplier_history" as multiplier_history {
  * id : UUID <<PK>>
  --
  * usd_to_credits_multiplier : FLOAT
  description : TEXT
  updated_by : VARCHAR(255)
  * effective_from : TIMESTAMP
  effective_to : TIMESTAMP
  * is_active : BOOLEAN
  * created_at : TIMESTAMP
}

entity "default_credits_history" as default_history {
  * id : UUID <<PK>>
  --
  * default_credits : FLOAT
  description : TEXT
  updated_by : VARCHAR(255)
  * effective_from : TIMESTAMP
  effective_to : TIMESTAMP
  * is_active : BOOLEAN
  * created_at : TIMESTAMP
}

entity "user_credits_transactions" as transactions {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  admin_id : VARCHAR(255)
  * transaction_type : VARCHAR(50)
  * amount : FLOAT
  * balance_before : FLOAT
  * balance_after : FLOAT
  reason : TEXT
  description : TEXT
  * created_at : TIMESTAMP
}

entity "background_jobs" as jobs {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  project_id : UUID <<FK>>
  paper_id : UUID <<FK>>
  * job_type : ENUM
  bull_job_id : VARCHAR(255)
  * status : ENUM
  failure_reason : TEXT
  * attempts : INTEGER
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

' Relationships

users ||--o{ email_tokens : "has"
users ||--o{ password_tokens : "has"
users ||--o{ refresh_tokens : "has"
users ||--o{ projects : "owns"
users ||--o{ llm_logs : "generates"
users ||--o{ transactions : "has"
users ||--o{ jobs : "initiates"
projects ||--o{ papers : "contains"
projects ||--o{ llm_logs : "tracks"
projects ||--o{ jobs : "has"
papers ||--o{ llm_logs : "tracks"
papers ||--o{ jobs : "has"

' Notes

note right of users
  Core user authentication table
  - Stores user credentials
  - Email verification status
  - Account active status
  - **AI Credits balance** (NEW)
  - Deducted after each LLM usage
end note

note right of email_tokens
  Email verification workflow
  - One-time use tokens
  - Expires after 24 hours
  - Cascade delete with user
end note

note right of password_tokens
  Password reset workflow
  - One-time use tokens
  - Expires after 1 hour
  - Cascade delete with user
end note

note right of refresh_tokens
  JWT refresh token management
  - Expires after 7 days
  - Can be revoked
  - Tracks token rotation
end note

note right of projects
  User research projects
  - Stores project metadata
  - Links to user
  - Cascade delete with user
end note

note right of papers
  Candidate papers for analysis
  - Basic info (title, abstract, link)
  - LLM processing status
  - Semantic similarity scores
  - C1/C2 analysis results
  - Research gap identification
  - Cascade delete with project
end note

note right of model_pricing
  LLM Model Pricing Management
  - Stores pricing for different models
  - Multiple pricing tiers (batch/flex/standard/priority)
  - Supports cached input pricing
  - Supports versioning (effective dates)
  - isLatest flag for current pricing per tier
  - Prices in USD per million tokens (Float)
  - Admin-only management
end note

note right of llm_logs
  LLM API usage tracking
  - Tracks every OpenAI API call
  - Records tokens and costs (USD)
  - Performance metrics (duration)
  - Used for billing and analytics
  - **Triggers credit deduction** (NEW)
  - Cascade delete with user
  - SET NULL on project/paper delete
end note

note right of multiplier_history
  **USD to Credits Multiplier History** (NEW)
  - Tracks conversion rate changes
  - 1 USD = X Credits
  - Admin can update (creates new entry)
  - Query latest with isActive = true
  - Complete audit trail
end note

note right of default_history
  **Default Credits History** (NEW)
  - Tracks default signup credits changes
  - Admin can update (creates new entry)
  - Query latest with isActive = true
  - Used during user registration
end note

note right of transactions
  **User Credits Transactions** (NEW)
  - Tracks all manual credit changes
  - Types: SIGNUP_DEFAULT, ADMIN_RECHARGE, ADMIN_DEDUCT
  - Records balance before/after
  - Admin actions tracked
  - Complete audit trail
  - LLM deductions NOT here (in llm_logs)
end note

note right of jobs
  **Background Jobs Tracking** (NEW)
  - Tracks asynchronous job processing
  - Job Types: PROJECT_INIT_INTENT, PROJECT_INIT_QUERY, PAPER_SCORING, SEND_EMAIL
  - Job Status: PENDING, PROCESSING, COMPLETED, FAILED, FAILED_NO_CREDITS
  - Links to BullMQ job ID
  - Tracks retry attempts
  - Stores failure reasons
  - Used for job recovery and monitoring
end note

@enduml
